Fix Jenkinsfile and nexus deploy

--- a/.pypirc
+++ b/.pypirc
@@ -1,8 +1,8 @@
 [distutils]
 index-servers =
-    artifactory
+    nexus
 
-[artifactory]
-repository: https://acv.jfrog.io/acv/api/pypi/pypi
+[nexus]
+repository: https://nexus.infra.acvauctions.com/repository/pypi-releases/
 username:
 password:
